Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - minor changes to error strings to distinguish between issues that
            can be determined from static inspection of schema(s), and those
            that only arise during runtime evaluation (such as URIs that
            map to missing schema documents, or inconsistent configuration
            values).

0.024     2021-03-23 21:53:42Z
          - the default value for "validate_formats" is once again false (it
            became true in v0.020), to properly conform to the specification

0.023     2021-02-21 18:36:32Z
          - fix "try/catch is experimental" warnings in perl 5.33.7

0.022     2021-02-07 17:33:14Z
          - fix erroneous use of postfix dereference (closes #42).

0.021     2021-02-06 18:50:42Z
          - [Pp]roperties$ keywords now always produce annotations when
            evaluating successfully, even if there were no matching properties
          - added the "strict_basic" output format, for strict (but incorrect)
            adherence to the draft 2019-09 specification

0.020     2021-01-02 17:12:09Z
          - the default value for "validate_formats" is now true, to reflect
            the most typical usecase.
          - gracefully handle the erroneous schema { "type": null }
          - fixes to relative-json-pointer format validation
          - new "annotate_unknown_keywords" config option

0.019     2020-12-08 18:40:10Z
          - further improvements to the "terse" output format
          - add_schema will now die with a Result object rather than a
            listref of Error objects, when the document contains errors.

0.018     2020-12-07 18:22:07Z
          - now can correctly evaluate schemas containing unevaluatedItems,
            unevaluatedProperties keywords without the user having to
            explicitly set collect_annotations => 1 in the constructor
          - fix error in "terse" output formatting that mistakenly dropped